Ta i bruk native restklient fra fpfelles (#2036)